# lemonbar

./: Makefile  README.pod  example.sh  lemonbar.c  meson.build
